--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
-<script>
-  window.addEventListener("message", (event) => {
-    const data = event.data;
-    const map = window.myMap; // ton instance Leaflet créée ailleurs
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Carte dynamique</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <style>
+    html, body, #map { height:100%; margin:0; padding:0; }
+  </style>
+</head>
+<body>
+  <div id="map"></div>
 
-    // Nettoie les anciens marqueurs si nécessaire
-    if (window.currentMarkers) {
-      window.currentMarkers.forEach(m => m.remove());
-    }
+  <script>
+    let map = null;
 
-    window.currentMarkers = data.pins.map(pin => {
-      const [lat, lng] = pin.coord;
-      const couleur = getColorByCode(pin.codeannonce);
+    // Envoi un message pour dire à Wix que l'iframe est prête
+    window.parent.postMessage({ type: 'iframeReady' }, '*');
 
-      const marker = L.circleMarker([lat, lng], {
-        radius: 10,
-        fillColor: couleur,
-        color: "#000",
-        weight: 1,
-        opacity: 1,
-        fillOpacity: 0.8
-      }).addTo(map);
+    window.addEventListener("message", (event) => {
+      const data = event.data;
+      if (!data || !data.pins || !data.center) return;
 
-      marker.bindPopup(`<strong>${pin.address}</strong>`);
-      return marker;
+      if (!map) {
+        map = L.map('map').setView(data.center, 6);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          attribution: '© OpenStreetMap contributors'
+        }).addTo(map);
+      } else {
+        map.setView(data.center, 6);
+        // Nettoie les marqueurs existants
+        map.eachLayer(layer => {
+          if (layer instanceof L.Marker) {
+            map.removeLayer(layer);
+          }
+        });
+      }
+
+      data.pins.forEach(pin => {
+        L.marker(pin.coord).addTo(map).bindPopup(pin.address);
+      });
     });
-
-    map.setView(data.center, 6); // recentre la carte
-  });
-
-  function getColorByCode(code) {
-    switch (code) {
-      case "RR": return "#D2B48C"; // sable
-      case "RC": return "#ADD8E6"; // bleu clair
-      case "DR": return "#FFFFFF"; // blanc
-      case "DC": return "#90EE90"; // vert clair
-      default: return "#999999";   // gris par défaut
-    }
-  }
-</script>
+  </script>
+</body>
+</html>
