--- a/mapannonces.html
+++ b/mapannonces.html
@@ -29,17 +29,8 @@
       attribution: '© OpenStreetMap contributors'
     }).addTo(map);
 
-    // Couleurs des pins selon catégorie (RR, RC, DR, DC)
-    var colors = {
-      RR: '#f4a460',  // sable (sandy brown)
-      RC: '#87ceeb',  // bleu ciel (sky blue)
-      DR: '#ffffff',  // blanc (white)
-      DC: '#90ee90'   // vert clair (light green)
-    };
-
     var markers = [];
 
-    // Fonction pour effacer tous les markers
     function clearMarkers() {
       markers.forEach(function(marker) {
         map.removeLayer(marker);
@@ -47,12 +38,16 @@
       markers = [];
     }
 
-    // Fonction pour ajouter des markers à la carte
-    function addMarkers(annonces) {
+    function addMarkers(pins) {
       clearMarkers();
-      annonces.forEach(function(annonce) {
-        var color = colors[annonce.category] || 'blue';
-        var marker = L.circleMarker([annonce.lat, annonce.lon], {
+      pins.forEach(function(pin) {
+        // pin.coord = [lat, lon], pin.color, pin.label
+        var lat = pin.coord[0];
+        var lon = pin.coord[1];
+        var color = pin.color || 'blue';
+        var label = pin.label || '';
+
+        var marker = L.circleMarker([lat, lon], {
           radius: 8,
           fillColor: color,
           color: '#000',
@@ -60,20 +55,20 @@
           opacity: 1,
           fillOpacity: 0.8
         }).addTo(map);
-        marker.bindPopup(annonce.titre || '');
+        marker.bindPopup(label);
         markers.push(marker);
       });
     }
 
-    // Écoute des messages venant de la page parent Wix
     window.addEventListener('message', function(event) {
-      // Optionnel : vérifier event.origin si tu veux sécuriser la source
-
       try {
         var data = typeof event.data === 'string' ? JSON.parse(event.data) : event.data;
-        if (data.type === 'annonces') {
-          if (Array.isArray(data.payload)) {
-            addMarkers(data.payload);
+
+        if (data.pins && Array.isArray(data.pins)) {
+          addMarkers(data.pins);
+
+          if (data.center && Array.isArray(data.center)) {
+            map.setView(data.center, 8); // zoom 8 par défaut, modifie si besoin
           }
         }
       } catch (e) {
