--- a/mapannonces.html
+++ b/mapannonces.html
@@ -41,23 +41,36 @@
     function addMarkers(pins) {
       clearMarkers();
       pins.forEach(function(pin) {
-        // pin.coord = [lat, lon], pin.color, pin.label
         var lat = pin.coord[0];
         var lon = pin.coord[1];
         var color = pin.color || 'blue';
-        var label = pin.label || '';
+        var label = pin.address || '';
 
-        var marker = L.circleMarker([lat, lon], {
-          radius: 8,
-          fillColor: color,
-          color: '#000',
-          weight: 1,
-          opacity: 1,
-          fillOpacity: 0.8
-        }).addTo(map);
+        // Création d’un icône personnalisé avec la couleur du pin
+        var icon = L.icon({
+          iconUrl: `https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-${getColorName(color)}.png`,
+          iconSize: [25, 41],
+          iconAnchor: [12, 41],
+          popupAnchor: [1, -34],
+          shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+          shadowSize: [41, 41]
+        });
+
+        var marker = L.marker([lat, lon], { icon: icon }).addTo(map);
         marker.bindPopup(label);
         markers.push(marker);
       });
+    }
+
+    // Traduire couleur hex en nom anglais approximatif utilisé par l’URL d’icônes
+    function getColorName(hex) {
+      switch (hex.toLowerCase()) {
+        case '#d4b483': return 'orange'; // sable
+        case '#ffffff': return 'white';  // blanc
+        case '#b2e1a9': return 'green';  // vert clair
+        case '#add8e6': return 'blue';   // bleu clair
+        default: return 'blue';
+      }
     }
 
     window.addEventListener('message', function(event) {
@@ -66,9 +79,8 @@
 
         if (data.pins && Array.isArray(data.pins)) {
           addMarkers(data.pins);
-
           if (data.center && Array.isArray(data.center)) {
-            map.setView(data.center, 8); // zoom 8 par défaut, modifie si besoin
+            map.setView(data.center, 8);
           }
         }
       } catch (e) {
