--- a/mapannonces.html
+++ b/mapannonces.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
   <title>Carte des annonces</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-    }
+    html, body, #map { height: 100%; margin: 0; padding: 0; }
   </style>
 </head>
 <body>
@@ -22,71 +14,44 @@
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    var map = L.map('map').setView([46.5, 2.5], 6);
+    const map = L.map('map').setView([46.8, 2.5], 6); // Vue par défaut France
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 18,
-      attribution: '© OpenStreetMap contributors'
+      attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    var markers = [];
+    let markersGroup = L.layerGroup().addTo(map);
 
-    function clearMarkers() {
-      markers.forEach(function(marker) {
-        map.removeLayer(marker);
-      });
-      markers = [];
-    }
+    window.addEventListener('message', event => {
+      const data = event.data;
+      if (!data || !Array.isArray(data.pins)) return;
 
-    function addMarkers(pins) {
-      clearMarkers();
-      pins.forEach(function(pin) {
-        var lat = pin.coord[0];
-        var lon = pin.coord[1];
-        var color = pin.color || 'blue';
-        var label = pin.address || '';
+      markersGroup.clearLayers(); // Supprime les anciens
 
-        // Création d’un icône personnalisé avec la couleur du pin
-        var icon = L.icon({
-          iconUrl: `https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-${getColorName(color)}.png`,
-          iconSize: [25, 41],
-          iconAnchor: [12, 41],
-          popupAnchor: [1, -34],
-          shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
-          shadowSize: [41, 41]
+      const bounds = [];
+
+      data.pins.forEach(pin => {
+        const marker = L.circleMarker(pin.coord, {
+          radius: 8,
+          fillColor: pin.color || "#0000ff",
+          color: "#000",
+          weight: 1,
+          opacity: 1,
+          fillOpacity: 0.8
         });
 
-        var marker = L.marker([lat, lon], { icon: icon }).addTo(map);
-        marker.bindPopup(label);
-        markers.push(marker);
+        marker.bindPopup(pin.label || 'Annonce');
+        marker.addTo(markersGroup);
+
+        bounds.push(pin.coord);
       });
-    }
 
-    // Traduire couleur hex en nom anglais approximatif utilisé par l’URL d’icônes
-    function getColorName(hex) {
-      switch (hex.toLowerCase()) {
-        case '#d4b483': return 'orange'; // sable
-        case '#ffffff': return 'white';  // blanc
-        case '#b2e1a9': return 'green';  // vert clair
-        case '#add8e6': return 'blue';   // bleu clair
-        default: return 'blue';
+      // Centre automatiquement la carte sur tous les points
+      if (bounds.length > 0) {
+        map.fitBounds(bounds, { padding: [20, 20] });
       }
-    }
-
-    window.addEventListener('message', function(event) {
-      try {
-        var data = typeof event.data === 'string' ? JSON.parse(event.data) : event.data;
-
-        if (data.pins && Array.isArray(data.pins)) {
-          addMarkers(data.pins);
-          if (data.center && Array.isArray(data.center)) {
-            map.setView(data.center, 8);
-          }
-        }
-      } catch (e) {
-        console.warn('Erreur parsing message:', e);
-      }
-    }, false);
+    });
   </script>
 </body>
 </html>
