--- a/mapreferents.html
+++ b/mapreferents.html
@@ -8,6 +8,7 @@
     html, body, #map {
       height: 100%;
       margin: 0;
+      padding: 0;
     }
   </style>
 </head>
@@ -16,7 +17,7 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([46.8, 2.2], 6); // Centre France
+    const map = L.map('map').setView([46.8, 2.2], 6);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
@@ -29,20 +30,20 @@
         if (!ref.adresse) continue;
 
         try {
-          const geoData = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(ref.adresse)}`);
-          const json = await geoData.json();
-          if (json[0]) {
-            const lat = parseFloat(json[0].lat);
-            const lon = parseFloat(json[0].lon);
+          const response = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(ref.adresse)}`);
+          const results = await response.json();
 
+          if (results[0]) {
+            const lat = parseFloat(results[0].lat);
+            const lon = parseFloat(results[0].lon);
             const marker = L.marker([lat, lon]).addTo(map);
             marker.bindPopup(`<b>${ref.nom}</b><br>${ref.adresse}`);
           }
-        } catch (e) {
-          console.error("Erreur géocodage :", e);
+        } catch (error) {
+          console.error(`Erreur géocodage pour ${ref.nom} :`, error);
         }
 
-        await new Promise(r => setTimeout(r, 1000)); // pause pour éviter blocage Nominatim
+        await new Promise(resolve => setTimeout(resolve, 1000)); // Respecter la limite Nominatim
       }
     });
   </script>
