--- a/mapreferents.html
+++ b/mapreferents.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Carte Référents</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+    html, body, #map { height: 100%; margin: 0; padding: 0; }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([46.8, 2.2], 6);
+    const map = L.map('map').setView([46.8, 2.5], 6);
+
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    window.addEventListener("message", async (event) => {
-      const referents = event.data;
-      if (!Array.isArray(referents)) return;
+    let markersGroup = L.layerGroup().addTo(map);
 
-      for (const ref of referents) {
-        if (!ref.adresse) continue;
+    window.addEventListener('message', event => {
+      const data = event.data;
+      if (!data || !Array.isArray(data.pins)) return;
 
-        try {
-          const response = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(ref.adresse)}`);
-          const results = await response.json();
+      markersGroup.clearLayers();
 
-          if (results[0]) {
-            const lat = parseFloat(results[0].lat);
-            const lon = parseFloat(results[0].lon);
-            const marker = L.marker([lat, lon]).addTo(map);
-            marker.bindPopup(`<b>${ref.nom}</b><br>${ref.adresse}`);
-          }
-        } catch (error) {
-          console.error(`Erreur géocodage pour ${ref.nom} :`, error);
-        }
+      const bounds = [];
 
-        await new Promise(resolve => setTimeout(resolve, 1000)); // Respecter la limite Nominatim
+      data.pins.forEach(pin => {
+        const icon = L.divIcon({
+          className: "custom-pin",
+          html: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28">
+            <path fill="${pin.color || '#0000ff'}" stroke="#444" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z"/>
+          </svg>`,
+          iconSize: [28, 28],
+          iconAnchor: [14, 28]
+        });
+
+        const marker = L.marker(pin.coord, { icon }).addTo(markersGroup);
+        marker.bindPopup(`<b>${pin.label}</b><br>${pin.address}`);
+
+        bounds.push(pin.coord);
+      });
+
+      if (bounds.length > 0) {
+        map.fitBounds(bounds, { padding: [20, 20] });
       }
     });
   </script>
