--- a/mapreferents.html
+++ b/mapreferents.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Carte Référents</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     html, body, #map { height: 100%; margin: 0; padding: 0; }
@@ -11,79 +11,43 @@
 </head>
 <body>
   <div id="map"></div>
-
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([46.8, 2.5], 6); // Centre France
+    const map = L.map('map').setView([46.8, 2.4], 6);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
+    const markers = L.layerGroup().addTo(map);
 
-    const markersGroup = L.layerGroup().addTo(map);
-
-    // Fonction de géocodage (promesse avec log d'erreurs)
-    async function geocodeAdresse(adresse) {
-      try {
-        const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(adresse)}&countrycodes=fr&limit=1`;
-        const response = await fetch(url);
-        const data = await response.json();
-        if (data && data[0]) {
-          return [parseFloat(data[0].lat), parseFloat(data[0].lon)];
-        } else {
-          console.warn("Pas de résultat pour :", adresse);
-          return null;
-        }
-      } catch (e) {
-        console.error("Erreur géocodage : ", e);
-        return null;
+    window.addEventListener('message', event => {
+      const data = event.data;
+      if (!data || !data.pins) {
+        console.warn("Message reçu sans pins:", data);
+        return;
       }
-    }
+      console.log("Message reçu pins:", data.pins);
 
-    function getColor(role) {
-      if (!role) return "#0000ff"; // par défaut
-      const r = role.toLowerCase();
-      if (r.includes("référent")) return "#4CAF50";   // vert
-      if (r.includes("suppléant")) return "#2196F3";  // bleu
-      return "#999999"; // gris inconnu
-    }
-
-    window.addEventListener("message", async (event) => {
-      const referents = event.data;
-      if (!Array.isArray(referents)) return;
-
-      markersGroup.clearLayers();
+      markers.clearLayers();
       const bounds = [];
 
-      for (const ref of referents) {
-        if (!ref.adresse) continue;
-
-        console.log("Géocodage :", ref.nom, ref.adresse);
-
-        const coords = await geocodeAdresse(ref.adresse);
-        if (!coords) continue;
-
-        const color = getColor(ref.codeannonce);
+      data.pins.forEach(pin => {
+        if (!pin.coord) return;
         const icon = L.divIcon({
-          className: "custom-pin",
-          html: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28">
-            <path fill="${color}" stroke="#333" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z"/>
+          html: `<svg viewBox="0 0 24 24" width="28" height="28">
+            <path fill="${pin.color}" stroke="#333" d="M12 2C8.13 2 5 5.13 5 9
+            c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z"/>
           </svg>`,
-          iconSize: [28, 28],
-          iconAnchor: [14, 28]
+          className: "",
+          iconSize: [28,28],
+          iconAnchor: [14,28]
         });
+        L.marker(pin.coord, { icon }).bindPopup(`<b>${pin.label}</b><br>${pin.address}`)
+          .addTo(markers);
+        bounds.push(pin.coord);
+      });
 
-        const marker = L.marker(coords, { icon }).addTo(markersGroup);
-        marker.bindPopup(`<b>${ref.nom}</b><br>${ref.adresse}`);
-
-        bounds.push(coords);
-
-        await new Promise(r => setTimeout(r, 1000)); // Pause pour éviter blocage Nominatim
-      }
-
-      if (bounds.length > 0) {
-        map.fitBounds(bounds, { padding: [20, 20] });
-      } else {
-        console.warn("Aucun point valide trouvé.");
+      if (bounds.length) {
+        map.fitBounds(bounds, {padding:[20,20], maxZoom:14});
       }
     });
   </script>
