--- a/mapreferents.html
+++ b/mapreferents.html
@@ -51,6 +51,9 @@
 
         L.marker([lat, lng], { icon })
           .bindPopup(`<b>${pin.label || "Sans nom"}</b><br>${pin.address || ""}`)
+          if (pin.tel) {
+  popupContent += `<br>Tél : <a href="tel:${pin.tel}">${pin.tel}</a>`;
+}
           .addTo(markers);
 
         bounds.push([lat, lng]);
@@ -63,3 +66,4 @@
   </script>
 </body>
 </html>
+
